# starscale

./: .travis.yml  BackgroundSubtractScalarMask.py  Flatfield.py  PlotContrastStretch.py  README.md  README.rst  StellarIntensityRatio.py  localmax2d.py  requirements.txt  setup.cfg  setup.py
src/starscale/: flatfield.py
src/starscale/tests/: PKR_DASC_0558_20151007_060527.611.FITS
starscale/: flatfield.py
tests/: hst0cal.fits  hst1cal.fits  test.py  test_all.py
